--- a/styles/components/sections/ResultsExecutive.module.sass
+++ b/styles/components/sections/ResultsExecutive.module.sass
@@ -32,6 +32,8 @@
   padding-right: 70px
   @include m.media(desktop, laptop, tablet, phone)
     padding-right: 40px
+  @include m.media(desktop, widescreen)
+    
 
 .floatRight
   float: right
